[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["johangu"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
regex = "1"

[[bin]]
name = "day01"
path = "src/day01.rs"
test = true

[[bin]]
name = "day02"
path = "src/day02.rs"
test = true

[[bin]]
name = "day03"
path = "src/day03.rs"
test = true

[[bin]]
name = "day04"
path = "src/day04.rs"
test = true
